# fastapi-practice

./: .gitignore  app.py  pyproject.toml  reset_and_seed.sh  utils.py
database/: create_tables.py  database.py  main.py  models.py  queries.py  reset_db.py  schemas.py  seed.py
database/queries/: admin.py  lecture.py  speaker.py  window.py
database/scripts/: reset_db.py  seed.py
routers/: lectures.py  speakers.py  windows.py
utils/: constants.py  dependencies.py  main.py
