[tool.poetry]
name = "finnancia-fastapi"
version = "0.1.0"
description = ""
authors = ["Enzo Bozzani <enzobozzani@ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
